Feedback:: Resolved issues related to syntax and spacing

--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -40,7 +40,7 @@ a:focus {
   background: #7386d5;
   color: #fff;
   transition: all 0.3s;
-  position:fixed ;
+  position: fixed;
   height: 100vh;
 }
 
@@ -112,7 +112,7 @@ ul.CTAs a {
   margin-bottom: 5px;
 }
 
-a.download {
+a.info-button {
   background-color: #6d7fcc;
   color: #7386d5;
 }
